#112 change pagination-api according to new spec
