# app/src/main/java/de/triology/universeadm/AbstractManagerResource.java
@@ -43,17 +43,20 @@ import java.util.List;
  */
 public abstract class AbstractManagerResource<T> {
 
-    public static final int PAGING_DEFAULT_START = 0;
+    public static final int PAGING_DEFAULT_PAGE = 1;
 
-    public static final int PAGING_DEFAULT_LIMIT = 20;
+    public static final int PAGING_DEFAULT_PAGE_SIZE = 20;
 
-    public static final int PAGING_MAXIMUM = 100000;
+    public static final int PAGING_MAXIMUM_PAGE_SIZE = 100000;
 
     /**
      * the logger for UserResource
      */
     private static final Logger logger
             = LoggerFactory.getLogger(AbstractManagerResource.class);
+
+  @Context
+  protected UriInfo uriInfo;
 
     //~--- constructors ---------------------------------------------------------
 
@@ -67,6 +70,10 @@ public abstract class AbstractManagerResource<T> {
     }
 
     //~--- methods --------------------------------------------------------------
+
+    protected String getCurrentPath() {
+      return UriBuilder.fromUri(this.uriInfo.getBaseUri().getPath()).path(this.uriInfo.getPath()).build().toString();
+    }
 
     /**
      * Method description
@@ -98,6 +105,8 @@ public abstract class AbstractManagerResource<T> {
     }
 
     protected abstract String getId(T object);
+
+    protected abstract String getDefaultSortAttribute();
 
     /**
      * Method description
@@ -176,31 +185,42 @@ public abstract class AbstractManagerResource<T> {
         return builder.build();
     }
 
-    /**
-     * Method description
-     *
-     * @param s
-     * @param l
-     * @param query
-     * @return
-     */
-    @GET
-    @Produces(MediaType.APPLICATION_JSON)
-    public Response getAll(@QueryParam("start") int s, @QueryParam("limit") int l, @QueryParam("query") String query, @QueryParam("exclude") final String exclude) {
-        PaginationQuery paginationQuery = new PaginationQuery(s, l, query, exclude, null);
-
-        PagedResultList<T> result = manager.query(paginationQuery);
-
-        Response.ResponseBuilder builder;
-        if (result != null) {
-            builder = Response.ok(result);
-        } else if (Strings.isNullOrEmpty(query)) {
-            builder = Response.status(Response.Status.NOT_FOUND);
-        } else {
-            builder = Response.noContent();
-        }
-        return builder.build();
+  /**
+   * Method description
+   *
+   * @return
+   */
+  @GET
+  @Produces(MediaType.APPLICATION_JSON)
+  public Response getAll(
+    @QueryParam("page") int page,
+    @QueryParam("page_size") int page_size,
+    @QueryParam("query") String query,
+    @QueryParam("context") String context,
+    @QueryParam("exclude") final String exclude,
+    @QueryParam("sort_by") final String sortBy,
+    @QueryParam("reverse") final boolean reverse
+  ) {
+    String sortAttribute = sortBy;
+    if (Strings.isNullOrEmpty(sortBy)) {
+      sortAttribute = getDefaultSortAttribute();
     }
+
+    PaginationQuery paginationQuery = new PaginationQuery(page, page_size, query, context, exclude, sortAttribute, reverse);
+
+    PaginationResult<T> result = manager.query(paginationQuery);
+
+    Response.ResponseBuilder builder;
+    if (result != null) {
+      PaginationResultResponse<T> resultResponse = new PaginationResultResponse<>(paginationQuery, result, getCurrentPath());
+      builder = Response.ok(resultResponse);
+    } else if (Strings.isNullOrEmpty(query)) {
+      builder = Response.status(Response.Status.NOT_FOUND);
+    } else {
+      builder = Response.noContent();
+    }
+    return builder.build();
+  }
 
     //~--- fields ---------------------------------------------------------------
     /**
